--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,115 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
+
 <head>
-  <meta charset="utf-8">
-  <title>Pr3</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>RusAvangard</title>
+    <link href="styles.css" rel="stylesheet" type="text/css" />
+
 </head>
+
 <body>
-  <app-root></app-root>
+    <script src="script.js"></script>
+
+    <div class="cvet">
+        <div class="footer">
+            <h1 id="title">Художнки русского авангарда</h1>
+        </div>
+
+        <div class="slideshow-container">
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="http://www.theartnewspaper.ru/public/uploads/posts/post/2015-12/dbf41df1-b77e-4eee-9228-4900f521a200.jpg" style="width:100%" ;>
+                <div class="text">Автопртрет Машкова и Кончаловского</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img src="https://regnum.ru/uploads/pictures/news/2015/12/16/regnum_picture_1450289564928504_normal.jpg" style="width:100%">
+                <div class="text">"Импровизация 28" Кандинский</div>
+            </div>
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="http://artpoisk.info/files/images/19808.jpg" style="width:100%">
+                <div class="text">"Спортсмены" Малевич</div>
+            </div>
+
+
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+
+
+        <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
+        <a href="hud.html"><button>Художнки</button></a>
+        <a href="doppp.html"><button>Онлайн-галерея</button></a>
+        <div class="qwerty">
+            <ol>
+                Содержание
+                <li><a href="#Chto">Что такое авангард?</a></li>
+                <li><a href="#why">Почему с 1907 по 1932?</a></li>
+                <li><a href="#ochem">Что имелось в виду под авангардом в начале ХХ века?</a></li>
+                <li><a href="#sut">В чем вообще суть авангарда? </a></li>
+                <li><a href="#mozhno">Можно ли считать авангард левым искусством?</a></li>
+                <li><a href="#raz">Есть ли разница между авангардом и авангардизмом?</a></li>
+                <li><a href="#kak">Как люди относились к авангарду?</a></li>
+                <li><a href="#est">Есть авангард, а есть..?</a></li>
+
+            </ol>
+            <a name="#Chto"></a>
+            <h2>Что такое авангард?</h2>
+            <hr>
+            <p>Изначально это слово avant-garde (франц. Передовой отряд) использовалось исключительно в военном значении. Однако впоследствии оно преобразовалось. С точки зрения искусствоведа понятие «авангард» взаимозаменяемо словом «модерн» и имеет абстрактные
+                временные границы с конца XIX-го до первой трети XX вв. Оно подразумевает под собой идеи и произведения искусства этого периода. В то же время, с точки зрения историка, понятие «русский авангард» имеет вполне четкие хронологические границы
+                с 1910 по 1932 год. Здесь имеется в виду не идея, а человек, родивший ее, не картина, а выставка, на которой она была представлена. Конец XIX-го, ранний XX вв принято называть Модерном, который отличается от авангарда тем, что он намного
+                менее политизирован.</p>
+            <a name="why"></a>
+            <h2>Почему с 1907 по 1932?</h2>
+            <hr>
+            <p>1907 — год формирования «Голубой розы» — объединения художников (а также год проведения одноименной выставки). Хоть «Голубую розу» довольно сложно назвать авангардным объединением, на фоне того времени она сильно выделялась. 1932 — год перестройки
+                — считай уничтожения — всех художественных объединений. На их место приходят официальные союзы художников. Символом раннего соцреализма можно считать «Девушку в футболке», написанную в том же году. Государство вмешивается в искусство,
+                фактически решая спор, ведущийся в то время — обязано ли искусство быть понятно массам?Власть решила, что да, вводя систему госзаказов. Авангард покончил с академизмом, впоследствии уйдя от него в полную беспредметность. Однако государство
+                покончило с авангардом, используя искусство как средство пропаганды, фактически откатив все назад(хотя авангард всегда можно было считать пропагандой, только идей и идеалов самого творца).</p>
+            <a name="ochem"></a>
+            <h2>Что имелось в виду под авангардом в начале ХХ века?</h2>
+            <hr>
+            <p>Тогда слово имело социальный контекст. Термин «авангард революции» существовал уже в 1900-х гг, и тоже имел множество значений, одно из которых — город Ленинград. Как-то Троцкий назвал коммунистическую молодежь «авангардом авангарда». «Боевым
+                авангардом» называли Красную армию. Комсомол — «авангард безбожия». Даже церковь использовала этот термин, однако в видоизмененном значении — баптизм и адвентизм («сектанство немецкое») — «духовный немецкий авангард». Однако в сфере искусства,
+                особенно в начале периода «авангард», этот термин употреблялся реже. Его могли использовать как синоним слова «передовой». Представители чаще всего причисляли себя к определенному течению (алогисты, кубисты, будетляне и тд).</p>
+            <a name="sut"></a>
+            <h2>Так, окей, в чем вообще суть авангарда?</h2>
+            <hr>
+            <p>Борьба с академизмом и его правилами. Формирование нового искусства. Все началось с реалистов и передвижников, идущих против правил академизма, потом все перешло к мирискусникам (журнал «Мир искусств»), которе выступали за свободу искусства,
+                публикуя у себя как Васнецова, так и Ларионова, однако считавших, что во всем должна быть эстетика. В итоге все пришло к авангарду. Авангард — это стремление к будущему, постоянное движение. Здесь нет места прошлому.</p>
+            <a name="mozhno"></a>
+            <h2>Можно ли считать авангард левым искусством?</h2>
+            <hr>
+            <p>Можно. Однако в современном значении. В 1920-х гг термин «авангард» употреблялся как в контексте левых, так и в контексте правых, но в период «начала конца» (конец 1920-х, начало 1930-х гг) слово приобрело политический окрас и стало характеризоваться
+                официальными левыми взглядами. «Авангардное искусство» стало государственным, массовым искусством. Соответственно такие как Малевич и Крученых больше не поддерживались, их относили к авангардизму.</p>
+            <a name="raz"></a>
+            <h2>Есть ли разница между авангардом и авангардизмом?</h2>
+            <hr>
+            <p>В современном значении — нет. В то время — да. Авангардизмом называли беспредметное искусство (например супрематизм Малевича), и другие произведения искусства, непонятные публике.</p>
+            <a name="kak"></a>
+            <h2>Как люди относились к авангарду?</h2>
+            <hr>
+            <p>Догадаться не сложно. Люди плевались, критиковали. На каждое утверждение творца публика находила «правдивую аналогию». Свобода — распущенность, поиск нового — кривляние, упрощение форм — неумение рисовать, и так далее. Критики в основном придерживались
+                того же мнения. Некоторые относились позитивно, некоторые считали, что это всего лишь мимолетное увлечение, другие были очень негативно настроены и ставили в пример арьергард. Многие новаторы того времени были уверены, что если публика
+                или критика отозвалась о чем-то положительно, значит где-то была допущена ошибка.</p>
+            <a name="est"></a>
+            <h2>Есть авангард, а есть..?</h2>
+            <hr>
+            <div class="qaz">Арьегард. Старая школа. В военной терминологии — те, кто был позади главного отряда. Если использовать слово «авангард» в значении чего-то нового, то работы Да Винчи, или, к примеру, Врубеля, тоже можно рассматривать как представителей авангарда
+                (однако так никто не делает).</div>
+
+        </div>
+    </div>
 </body>
+
 </html>
